[gd_scene load_steps=7 format=3 uid="uid://dq54hofjabav5"]

[ext_resource type="Script" uid="uid://cdl5orgv4asy3" path="res://scenes/upgrades/upgrade_bar/upgrade_bar.gd" id="1_l0ec4"]
[ext_resource type="Theme" uid="uid://ckvu3lovxb6qy" path="res://resources/themes/default.tres" id="1_t5ou8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ywwv"]

[sub_resource type="Animation" id="Animation_gjxjh"]
resource_name = "unlocked_path"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("status:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(319, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("purchase:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("purchase/unlock:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(55, 13)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("status:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.94509804, 0, 0.14117648, 0.5882353)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("purchase:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.94509804, 0, 0.14117648, 0.5882353)]
}

[sub_resource type="Animation" id="Animation_2jbi5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("status:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("purchase:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("purchase/unlock:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(55, 13)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("status:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.94509804, 0, 0.14117648, 0.5882353)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("purchase:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.94509804, 0, 0.14117648, 0.5882353)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("status:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4w71q"]
_data = {
&"RESET": SubResource("Animation_2jbi5"),
&"unlocked_path": SubResource("Animation_gjxjh")
}

[node name="upgrade_bar" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 418.0
offset_top = 291.0
offset_right = -416.0
offset_bottom = -291.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_t5ou8")
color = Color(0.26293245, 0.26293245, 0.26293245, 1)
script = ExtResource("1_l0ec4")

[node name="upgrade_description" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -154.0
offset_top = 33.0
offset_right = 73.0
offset_bottom = 54.0
grow_horizontal = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 12
text = "upgrade description"
horizontal_alignment = 1
vertical_alignment = 1

[node name="upgrade_name" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -154.0
offset_top = 10.0
offset_right = 73.0
offset_bottom = 33.0
grow_horizontal = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 16
text = "path name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="path_level" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -11.0
offset_right = -7.0
offset_bottom = 11.0
grow_vertical = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 16
text = "(1/1)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="upgrade" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -83.0
offset_top = -26.0
offset_right = -7.0
offset_bottom = 5.0
grow_horizontal = 0
grow_vertical = 2
text = "+"

[node name="hover" type="RichTextLabel" parent="upgrade"]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 41.0
offset_top = -25.5
offset_right = 238.0
offset_bottom = 21.5
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_4ywwv")
text = "description goes here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="cost" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -71.0
offset_top = 39.0
offset_right = -15.0
offset_bottom = 63.0
grow_horizontal = 0
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 14
text = "300.0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="purchase" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.94509804, 0, 0.14117648, 0.5882353)

[node name="unlock" type="Button" parent="purchase"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 55.0
offset_top = 13.0
offset_right = -55.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = "Unlock Path (20 eggs)"

[node name="status" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -0.00036621094
grow_horizontal = 2
grow_vertical = 2
color = Color(0.94509804, 0, 0.14117648, 0.5882353)

[node name="label" type="RichTextLabel" parent="status"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 56.0
offset_top = 13.0
offset_right = -54.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 16
text = "Autoegg Required"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4w71q")
}

[connection signal="pressed" from="upgrade" to="." method="_on_upgrade_pressed"]
[connection signal="pressed" from="purchase/unlock" to="." method="_on_unlock_pressed"]
